Created a favicon for the website and connected the search bar to the data with real time filtering enabled

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EduGrade</title>
     <script src="./index.js" type="module"></script>
+    <link rel="icon" type="image/png" href="./images/open-book.png"/>
   </head>
   <body>
     <div id="root"></div>
